--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "mocha -r esm",
     "start": "NODE_ENV=development webpack -d --progress --watch",
-    "build": "NODE_ENV=production webpack -p --progress"
+    "build": "NODE_ENV=production webpack -p --progress",
+    "deploy": "firebase deploy --only hosting:nutshell-home",
+    "publish": "npm run build && npm run deploy"
   },
   "repository": {
     "type": "git",
@@ -44,6 +46,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "esm": "^3.2.25",
+    "firebase-tools": "^8.2.0",
     "mocha": "^7.1.2",
     "recursive-readdir": "^2.2.2",
     "request": "^2.88.2",
